# skeletonkey

./: .gitignore  .gitmodules  CMakeLists.txt  bd0_config.yml  toolchain_gcc-arm-none-eabi.cmake
hardware/bd0/: bd0.kicad_pcb  bd0.kicad_prl  bd0.kicad_pro  bd0.kicad_sch  fp-lib-table
hardware/lib/Conn_CUI_SJ-4351/: Conn_CUI_SJ-4351.kicad_sym
hardware/lib/Conn_CUI_SJ-4351/Conn_CUI_SJ-4351.pretty/: CUI-SJ-43514_REVERSE-0.kicad_mod
software/: CMakeLists.txt
software/src/: main.cpp
